# raps-twin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DEPLOYMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  TODO.md  docker-compose.yml  eddt-local-llm-architecture.md  eddt-mesa-simpy-implementation.md  engineering-dept-digital-twin-architecture.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_simulation.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.simulation  Dockerfile.tier1  Dockerfile.tier2  tier1_server.py  tier2_server.py
eddt/: __init__.py  agents.py  bottleneck.py  cli.py  comparison.py  dashboard.py  durations.py  estimation.py  llm.py  locks.py  metrics.py  model.py  resources.py  skills.py  tasks.py  visualizations.py  whatif.py
examples/: __init__.py  simple_simulation.py
notebooks/: 01_basic_simulation.ipynb
scenarios/: add_designer.yaml  baseline.yaml  lock_contention.yaml  team_junior.yaml  team_senior.yaml
scripts/: __init__.py  setup_models.ps1  setup_models.sh
specs/001-scenario-comparison/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-scenario-comparison/checklists/: requirements.md
specs/001-scenario-comparison/contracts/: comparison_api.py
specs/002-bottleneck-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bottleneck-analysis/checklists/: requirements.md
specs/002-bottleneck-analysis/contracts/: bottleneck_api.py
specs/003-what-if-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-what-if-analysis/checklists/: requirements.md
specs/003-what-if-analysis/contracts/: whatif_api.py
specs/004-realtime-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-realistic-simulation/: plan.md  spec.md  tasks.md
src/eddt/: __init__.py  __main__.py  config.py  logging_config.py  main.py  utils.py
tests/: __init__.py  test_agents.py  test_api_endpoints.py  test_bottleneck.py  test_comparison.py  test_dashboard.py  test_durations.py  test_engine_determinism.py  test_estimation.py  test_integration.py  test_llm.py  test_locks.py  test_model.py  test_sim_manager.py  test_simulation.py  test_skills.py  test_tools.py  test_whatif.py
(+28 files in other folders)
